--- a/index.html
+++ b/index.html
@@ -615,7 +615,7 @@
 
 <section class="footer container-fluid m-0 p-0" style="height: 90px;">
   <div class="container h-100 d-flex justify-content-between align-items-center">
-    <p class="p-0 m-0 ml-2 text-light">© 2020 @luke.portfolio.com This template is made by Luke</p>
+    <p class="p-0 m-0 ml-2 text-light">© 2020 @luke.sillano This template is gawa ni Luke</p>
 
     <ul class="social d-flex justify-content-lg-between p-0 m-0">
       <li><a href="https://www.facebook.com/luke.adrian.79/"><i class="fab fa-facebook-square"></i></a></li>
