--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     <!-- logo title -->
     <link rel="icon" href="./img/logo-title-real.jpg">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+
+     <!-- font-awesome -->
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 </head>
 <body>
   <div class="sidebar-blur">
@@ -65,15 +69,15 @@
 
             <ul class="list-choices">
               <li><a href="">Footwear</a></li>
-              <li><a href="">Men</a></li>
-              <li><a href="">Women</a></li>
+              <li><a href="./about.html">About</a></li>
+              <li><a href="./upcoming.html">Upcoming</a></li>
               <li><a href="">Gifts</a></li>
             </ul>
 
             <ul class="list">               
-                <li><i class="fas fa-search"></i> </li>
+                <li><i class="fa-solid fa-magnifying-glass"></i> </li>
                 <span></span>
-                <li class="shop-btn" alt="as"> <i class="fas fa-shopping-cart btn" ></i> </li>
+                <li class="shop-btn" alt="as"> <i class="fa-solid fa-cart-shopping"></i> </li>
                 <!-- <div class="count">0</div> -->
             </ul>
         </nav>
@@ -216,7 +220,6 @@
     </div>
     <button class="btn btn-danger btn-purchase" type="button">PURCHASE</button>
   </div> -->
-
 
 
          <div class="bgmodal container-fluid bg_modal thiss">
@@ -615,12 +618,12 @@
 
 <section class="footer container-fluid m-0 p-0" style="height: 90px;">
   <div class="container h-100 d-flex justify-content-between align-items-center">
-    <p class="p-0 m-0 ml-2 text-light">© 2020 @luke.sillano This template is made by Luke</p>
+    <p class="p-0 m-0 ml-2 text-light">© 2020 @norlito.untalasco This template is made by Norlito</p>
 
     <ul class="social d-flex justify-content-lg-between p-0 m-0">
-      <li><a href="https://www.facebook.com/luke.adrian.79/"><i class="fab fa-facebook-square"></i></a></li>
-      <li><a href="https://www.instagram.com/lukeadrian_25/"><i class="fab fa-instagram"></i></a></li>
-      <li><a href="https://twitter.com/luke_adriannn"><i class="fab fa-twitter "></i></a></li>
+      <li><a href="https://www.facebook.com/nrlt.ntxxx"><i class="fab fa-facebook-square"></i></a></li>
+      <li><a href=""><i class="fab fa-instagram"></i></a></li>
+      <li><a href=""><i class="fab fa-twitter "></i></a></li>
     </ul>
   </div>
 </section>
